--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.9.6
+      - image: cimg/python:3.10.5
     
     working_directory: ~/repo
     
@@ -15,13 +15,6 @@ jobs:
           - v2-dependencies-
 
       - run:
-          name: Install pandoc
-          command: |
-                    sudo apt-get update 
-                    wget https://github.com/jgm/pandoc/releases/download/2.14.1/pandoc-2.14.1-1-amd64.deb
-                    sudo dpkg -i pandoc-2.14.1-1-amd64.deb
-
-      - run:
           name: Install 7z, unrar
           command: |
                     sudo apt-get install -y p7zip-full
@@ -32,47 +25,13 @@ jobs:
                     sudo apt-get install -y inkscape
           
       - run:
-          name: Install graphviz
-          command: |
-                    sudo apt-get install -y graphviz
-          
-      - run:
-          name: Install libproj
+          name: Install libproj, graphviz
           command: |
             sudo apt-get install -y libgeos-dev libproj-dev proj-data graphviz
 
       - run:
-          name: Install standard libraries
-          command: |
-            python -m venv venv
-            . venv/bin/activate
-            pip install scipy matplotlib numpy cython pandas
-
-      - run:
-          name: Install pyproj, shapely, cartopy
-          command: |
-            python -m venv venv
-            . venv/bin/activate
-            pip install pyproj
-            pip uninstall -y shapely
-            pip install --no-binary shapely shapely
-            pip install cartopy
-
-      - run:
-          name: Install numba, llvmlite
-          command: |
-            python -m venv venv
-            . venv/bin/activate
-            # export LLVM_CONFIG=/usr/local/opt/llvm/bin/llvm-config
-            sudo ln -s /usr/bin/llvm-config-10 /usr/bin/llvm-config
-            pip install llvmlite numba
-
-      - run:
           name: install dependencies
           command: |
-            python -m venv venv
-            . venv/bin/activate
-            pip install wheel
             pip install -r requirements.txt
 
       - save_cache:
@@ -83,39 +42,22 @@ jobs:
       - run:
           name: check list of dependencies
           command: |
-            python -m venv venv
-            . venv/bin/activate
             pip freeze
             apt list --installed
         
       - run:
           name: run tests
           command: |
-            . venv/bin/activate
             export PYTHONPATH=src
             python setup.py unittests -d 20
 
       - run:
           name: wheel
           command: |
-            . venv/bin/activate
             export PYTHONPATH=src
             python ./setup.py bdist_wheel
             mkdir -p test-reports/dist
             cp dist/*.whl test-reports/dist
-
-#      - run:
-#          name: documentation
-#          command: |
-#            . venv/bin/activate
-#            python ./setup.py build_sphinx
-#            
-#      - run:
-#          name: copy documentation
-#          command: |
-#            mkdir -p test-reports/doc
-#            mkdir -p test-reports/pdf
-#            zip -r -9  test-reports/doc/documentation_html.zip _doc/sphinxdoc/build/html
             
       - store_artifacts:
           path: test-reports
