--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ install:
   # install precompiled versions not available on pypi
   - "%PYTHON%\\Scripts\\pymy_install3 llvmlite numba cartopy shapely pyproj"
   # other dependencies
-  - "%PYTHON%\\Scripts\\pip install -r requirements.txt --no-deps"
+  - "%PYTHON%\\Scripts\\pip install -r requirements.txt"
   - set PYTHONPATH=src
 build: off
 
