--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,14 +13,14 @@ install:
   - "%PYTHON%\\python -m pip install wheel pymyinstall"
   # for many packages
   # install precompiled versions not available on pypi
-  - "%PYTHON%\\Scripts\\pymy_install3 llvmlite numba cartopy shapely pyproj"
+  - "%PYTHON%\\Scripts\\pymy_install3 cartopy shapely pyproj"
   # other dependencies
   - "%PYTHON%\\Scripts\\pip install -r requirements.txt"
   - set PYTHONPATH=src
 build: off
 
 test_script:
-  - "%PYTHON%\\python -u setup.py unittests"
+  - "%PYTHON%\\python -u setup.py unittests -d 30"
 
 after_test:
   - "%PYTHON%\\python -u setup.py bdist_wheel"
