--- a/.gitignore
+++ b/.gitignore
@@ -278,5 +278,10 @@ _doc/sphinxdoc/source/c_ml/*.html
 _unittests/ut_graph/*.prof
 _doc/notebooks/ml/onnxruntime*.json
 _doc/notebooks/ml/tree_*.onnx
+_doc/sphinxdoc/source/HISTORY.rst
+_doc/sphinxdoc/source/README.rst
+_doc/sphinxdoc/source/_static/embed-amd.js
+_doc/sphinxdoc/source/_static/style_notebook_snippet.css
+_doc/sphinxdoc/source/_temp_*
 *.out
 *.err
