--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Install requirements
         run: python -m pip install -r requirements.txt
 
-      - name: Install
-        run: python -m pip install -e .
+      #- name: Install
+      #  run: python -m pip install -e .
 
       - name: Documentation
         run: python -m sphinx ./_doc ./dist/html
