--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ snakeviz
 scikit-learn>=1.1
 git+https://github.com/onnx/sklearn-onnx.git
 sphinx
-sphinx-bootstrap-theme
+sphinx_gallery 
 sphinxcontrib.imagesvg
 stack_data
 statsmodels
