--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -38,6 +38,10 @@ jobs:
 
       #- name: Install
       #  run: python -m pip install -e .
+      - name: Copy license
+        run: cp LICENSE* ./_doc/sphinxdoc/source
+      - name: Copy readme
+        run: cp README* ./_doc/sphinxdoc/source
 
       - name: Documentation
         run: python -m sphinx ./_doc/sphinxdoc/source ./dist/html
