--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -33,6 +33,9 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install pandoc
+        run: apt-get install -y pandoc
+
       - name: Install requirements
         run: python -m pip install -r requirements.txt
 
