--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -34,7 +34,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install pandoc
-        run: apt-get install -y pandoc
+        run: sudo apt-get install -y pandoc
 
       - name: Install requirements
         run: python -m pip install -r requirements.txt
