--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -33,17 +33,23 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install pandoc
+        run: sudo apt-get install -y pandoc
+
       - name: Install requirements
         run: python -m pip install -r requirements.txt
 
-      - name: Install requirements-dev.txt
-        run: python -m pip install -r requirements-dev.txt
+      #- name: Install
+      #  run: python -m pip install -e .
+      - name: Copy license
+        run: cp LICENSE* ./_doc/sphinxdoc/source
+      - name: Copy readme
+        run: cp README* ./_doc/sphinxdoc/source
 
-      - name: Install
-        run: python -m pip install -e .
-
+      #- name: Documentation
+      #  run: python -m sphinx ./_doc/sphinxdoc/source ./dist/html
       - name: Documentation
-        run: python -m sphinx ./_doc ./dist/html
+        run: python setup.py build_sphinx
 
       - uses: actions/upload-artifact@v3
         with:
