--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
 
       - restore_cache:
           keys:
-          - v4-dependencies-{{ checksum "requirements.txt" }}
+          - v4-dependencies-{{ checksum "requirements-dev.txt" }}
           - v4-dependencies-
 
       - run:
@@ -47,11 +47,12 @@ jobs:
           name: install dependencies
           command: |
               pip install -r requirements.txt
+              pip install -r requirements-dev.txt
 
       - save_cache:
           paths:
             - ./venv
-          key: v4-dependencies-{{ checksum "requirements.txt" }}
+          key: v4-dependencies-{{ checksum "requirements-dev.txt" }}
         
       - run:
           name: check list of dependencies
