--- a/.local.jenkins.lin.yml
+++ b/.local.jenkins.lin.yml
@@ -13,6 +13,7 @@ install:
   - $PYINT -m pip install --upgrade --no-cache-dir --no-deps --index http://localhost:8067/simple/ jyquickhelper pyquickhelper pyensae pymmails pymyinstall pyrsslocal --extra-index-url=https://pypi.python.org/simple/
   - $PYINT -m pip install --upgrade --no-cache-dir --no-deps --index http://localhost:8067/simple/ mlinsights>=0.3 --extra-index-url=https://pypi.python.org/simple/
   - $PYINT -m pip install -r requirements.txt
+  - $PYINT -m pip install -r requirements-dev.txt
   - $PYINT --version
   - $PYINT -m pip freeze
 
