--- a/.local.jenkins.win.yml
+++ b/.local.jenkins.win.yml
@@ -7,6 +7,7 @@ install:
   - pip install --upgrade pip
   - pip install --no-cache-dir --no-deps --index http://localhost:8067/simple/ pyquickhelper pyensae pymmails pymyinstall pyrsslocal mlinsights
   - pip install -r requirements.txt
+  - pip install -r requirements-dev.txt
   - pip freeze
   - pip freeze > pip_freeze.txt
 script:
