--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,7 @@ install:
   - "%PYTHON%\\Scripts\\pymy_install3 cartopy shapely pyproj"
   # other dependencies
   - "%PYTHON%\\Scripts\\pip install -r requirements.txt"
+  - "%PYTHON%\\Scripts\\pip install -r requirements-dev.txt"
 build: off
 
 test_script:
