--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -39,11 +39,12 @@ jobs:
       - name: Install requirements
         run: python -m pip install -r requirements.txt
 
+      - name: Install
+        run: python -m pip install -e .
+
       - name: Install requirements dev
         run: python -m pip install -r requirements-dev.txt
 
-      #- name: Install
-      #  run: python -m pip install -e .
       - name: Copy license
         run: cp LICENSE* ./_doc
       - name: Copy readme
