--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -40,7 +40,7 @@ jobs:
         run: python -m pip install -r requirements.txt
 
       - name: Install
-        run: python -m pip install -e .
+        run: python setup.py install
 
       - name: Install requirements dev
         run: python -m pip install -r requirements-dev.txt
