--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -43,7 +43,9 @@ snakeviz
 scikit-learn>=1.1
 git+https://github.com/onnx/sklearn-onnx.git
 sphinx
-sphinx_gallery 
+sphinx_gallery
+sphinx-issues
+git+https://github.com/sdpython/sphinx-runpython.git
 sphinxcontrib.imagesvg
 stack_data
 statsmodels
