--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ ignore_directives = [
     "inheritance-diagram",
     "mathdef",
     "mathdeflist",
+    "nbgallery",
+    "nbgallerylink",
     "plot",
     "runpython",
     "tocdelay",
